syntax = "proto3";

// The java definition
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

// The objc definition
option objc_class_prefix = "HLW";

package helloworld;

message LongHelloRequest {
    string name = 1;
}

message LongHelloResponse {
    string result = 1;
}

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
    
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloResponse) {}

    // Client Streaming
    rpc LongSayHello(stream LongHelloRequest) returns (LongHelloResponse) {}
}

// The request message containing the user's name
message HelloRequest {
    string name = 1;    // ระบุ tag ที่ไม่ให้ซ้ำกันเพื่อใช้ในการทำ binary endcode
}

// The response message cotaining the gretting
message HelloResponse {
    string message = 1; // ระบุ tag ที่ไม่ให้ซ้ำกันเพื่อใช้ในการทำ binary endcode
}